test/compile-fail/unsupported/unions/expected.txt
error: unsupported feature
 --> top.rhdl:1:6
  |
1 | union a {}
  |       ^ RHDL cannot support unions or other unsafe code
